[package]
name = "bulk-index"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bzip2 = "0.5"
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive"] }
flate2 = "1.1.5"
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.18.0"
regex = "1.11"
reqwest = { version = "0.12.23", features = ["json"] }
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
zstd = "0.13.3"
