[project]
name = "make_release"
version = "1.2.0"
description = "A script to automate OpenSearch release note writing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Simeon Widdis", email = "sawiddis@amazon.com" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.1.7",
    "idna==3.10",
    "requests==2.31.0",
    "termcolor==3.1.0",
    "urllib3==2.5.0",
]

[project.scripts]
make_release = "make_release:make_release"

[project.urls]
Homepage = "https://github.com/Swiddis/opensearch-utils"
